# ohtu-tehtavat-2022

./: README.md  pyproject.toml  retro.md
poetry-web/: pyproject.toml
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  pankki.py  varasto.py
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/int-joukko/src/: index.py  int_joukko.py
viikko4/int-joukko/src/tests/: int_joukko_test.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py  komentotehdas.py  kumoaminen.py  miinus.py  nollaus.py  sovelluslogiikka.py  summa.py
viikko5/tennis/src/: index.py  tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  komentotehdas.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  tekoaly.py  tekoaly_parannettu.py  tuomari.py
(+1 files in other folders)
