[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["riikkayoki <74421508+riikkayoki@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
